--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,13 @@
 {
-  "version": 2,
-  "rewrites": [
+  "headers": [
     {
-      "source": "/(.*)",
-      "destination": "/api/index.js"
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "https://job-app-frontend-omega.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+      ]
     }
   ]
 }
