--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "node-latex": "^3.1.0",
     "pdfkit": "^0.17.2",
     "puppeteer": "^24.35.0"
   },
