--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,14 +1,18 @@
 # Use official Node.js LTS image
 FROM node:18-alpine
 
-# Install dependencies for Puppeteer (since you have puppeteur routes)
+# Install dependencies for Puppeteer AND LaTeX
 RUN apk add --no-cache \
     chromium \
     nss \
     freetype \
     harfbuzz \
     ca-certificates \
-    ttf-freefont
+    ttf-freefont \
+    texlive \
+    texlive-luatex \
+    texmf-dist-latexextra \
+    texmf-dist-fontsextra
 
 # Tell Puppeteer to use installed Chromium
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
@@ -26,7 +30,7 @@ RUN npm ci --only=production
 # Copy app source
 COPY . .
 
-# Expose port (make sure this matches your PORT env var)
+# Expose port
 EXPOSE 3001
 
 # Create a non-root user for security
